Quick bug fixes spotted in Kongregate
1) The game was too tall, adding scrollbars.  I was able to fix this by
lowering the "swix" logo at the top and reducing the upper margin above
the game.

2) The very large sprite that is used as a backdrop in the main menu
takes a long time to load.  Added a chunk of code to pre-cache it in the
load sequence.  This will make the load time slightly longer, but the
front menu won't be a mess as a result.

--- a/swix/swix.css
+++ b/swix/swix.css
@@ -43,7 +43,7 @@ img.embed{ margin: 10px; }
 
 #gameWrapper{
 	/* the margin is necessary to fit the grid and the title */
-	margin-top: 80px;
+	margin-top: 65px;
 	text-align:center;
 }
 
@@ -58,7 +58,7 @@ img.embed{ margin: 10px; }
 
 #swix{
 	position:absolute;
-	top:-75px;
+	top:-64px;
 	left:35px;
 }
 #stepstaken{
@@ -401,6 +401,20 @@ div.cellSample{
 	-ms-transform: rotate(3deg); /* IE 9 */
 	-webkit-transform: rotate(3deg); /* Chrome, Safari, Opera */
 	transform: rotate(3deg);
+	
+}
+
+.rotNeg10:hover{
+	-ms-transform: rotate(-10deg); /* IE 9 */
+	-webkit-transform: rotate(-10deg); /* Chrome, Safari, Opera */
+	transform: rotate(-10deg);
+	
+}
+
+.rot10:hover{
+	-ms-transform: rotate(10deg); /* IE 9 */
+	-webkit-transform: rotate(10deg); /* Chrome, Safari, Opera */
+	transform: rotate(10deg);
 	
 }
 
